--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2013-02-07  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* gnu/testlet/java/lang/ArrayStoreException/classInfo/isMemberClass.java:
+	* gnu/testlet/java/lang/ArrayStoreException/classInfo/isPrimitive.java:
+	* gnu/testlet/java/lang/ArrayStoreException/classInfo/isSynthetic.java:
+	Updated, added JDK tag.
+
 2013-02-06  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* gnu/testlet/java/lang/ArrayStoreException/TryCatch.java:
