--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2013-02-18  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* gnu/testlet/java/lang/ArrayStoreException/classInfo/InstanceOf.java:
+	* gnu/testlet/java/lang/ArrayStoreException/classInfo/getConstructors.java:
+	* gnu/testlet/java/lang/ArrayStoreException/classInfo/isAnnotationPresent.java:
+	* gnu/testlet/java/lang/ArrayStoreException/classInfo/isAnonymousClass.java:
+	* gnu/testlet/java/lang/ArrayStoreException/classInfo/isArray.java:
+	* gnu/testlet/java/lang/ArrayStoreException/classInfo/isAssignableFrom.java:
+	Updated, added JDK tag.
+
 2013-02-08  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* gnu/testlet/java/lang/ArrayStoreException/classInfo/getDeclaredAnnotations.java:
