--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2013-03-21  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/ClassCastException/classInfo/getDeclaredAnnotations.java:
+	* testlet/java/lang/ClassCastException/classInfo/getDeclaredClasses.java:
+	* testlet/java/lang/ClassCastException/classInfo/getDeclaredConstructor.java:
+	* testlet/java/lang/ClassCastException/classInfo/isEnum.java:
+	Added four new tests for ClassCastException class: isEnum,
+	getDeclaredAnnotations, getDeclaredClasses and getDeclaredConstructor.
+
 2013-03-20  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* gnu/testlet/java/lang/ClassCastException/classInfo/getPackage.java:
