--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2013-03-27  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/ClassCircularityError/classInfo/getAnnotation.java:
+	* testlet/java/lang/ClassCircularityError/classInfo/getAnnotations.java:
+	* testlet/java/lang/ClassCircularityError/classInfo/getCanonicalName.java:
+	* testlet/java/lang/ClassCircularityError/classInfo/getClasses.java:
+	Added four new tests for ClassCircularityError class: getAnnotation,
+	getAnnotations, getCanonicalName, getClasses.
+
 2013-03-26  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/ClassCircularityError/TryCatch.java:
