--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2013-03-29  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* gnu/testlet/java/lang/ClassCastException/classInfo/getDeclaringClass.java:
+	* gnu/testlet/java/lang/ClassCastException/classInfo/getEnclosingClass.java:
+	* gnu/testlet/java/lang/ClassCastException/classInfo/getEnclosingConstructor.java:
+	* gnu/testlet/java/lang/ClassCastException/classInfo/getEnclosingMethod.java:
+	Added four new tests for ClassCastException class: getDeclaringClass,
+	getEnclosingClass, getEnclosingConstructor and getEnclosingMethod.
+
 2013-03-28  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* gnu/testlet/java/lang/ClassCastException/classInfo/getConstructors.java:
