--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2013-04-02  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* gnu/testlet/java/lang/ClassCastException/classInfo/getFields.java:
+	* gnu/testlet/java/lang/ClassCastException/classInfo/getInterfaces.java:
+	* gnu/testlet/java/lang/ClassCastException/classInfo/getMethods.java:
+	* gnu/testlet/java/lang/ClassCastException/classInfo/getModifiers.java:
+	* gnu/testlet/java/lang/ClassCastException/classInfo/getName.java:
+	Updated, make these tests to work correctly with OpenJDK7, added JDK tags etc.
+
 2013-03-29  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* gnu/testlet/java/lang/ClassCastException/classInfo/getDeclaringClass.java:
