--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2013-04-10  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/ClassCircularityError/classInfo/getInterfaces.java:
+	* testlet/java/lang/ClassCircularityError/classInfo/getMethods.java:
+	* testlet/java/lang/ClassCircularityError/classInfo/getModifiers.java:
+	* testlet/java/lang/ClassCircularityError/classInfo/getSimpleName.java:
+	* testlet/java/lang/ClassCircularityError/classInfo/getSuperclass.java:
+	* testlet/java/lang/ClassCircularityError/classInfo/isAssignableFrom.java:
+	* testlet/java/lang/ClassCircularityError/classInfo/isInstance.java:
+	Updated, make these tests to work correctly with OpenJDK7, added JDK tags etc.
+
 2013-04-09  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/ClassCircularityError/classInfo/getConstructors.java:
