--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2013-04-15  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/ClassFormatError/TryCatch.java:
+	* testlet/java/lang/ClassFormatError/constructor.java:
+	* testlet/java/lang/ClassFormatError/classInfo/InstanceOf.java:
+	* testlet/java/lang/ClassFormatError/classInfo/isMemberClass.java:
+	* testlet/java/lang/ClassFormatError/classInfo/isPrimitive.java:
+	* testlet/java/lang/ClassFormatError/classInfo/isSynthetic.java:
+	Updated, make these tests to work correctly with OpenJDK7, added JDK tags etc.
+
 2013-04-11  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/ClassCircularityError/classInfo/getMethods.java:
