--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2013-04-19  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/ClassFormatError/classInfo/getDeclaringClass.java:
+	* testlet/java/lang/ClassFormatError/classInfo/getEnclosingClass.java:
+	* testlet/java/lang/ClassFormatError/classInfo/getEnclosingConstructor.java:
+	* testlet/java/lang/ClassFormatError/classInfo/getEnclosingMethod.java:
+	* testlet/java/lang/ClassFormatError/classInfo/getField.java:
+	Added five new tests for ClassFormatError class: getDeclaringClass,
+	getEnclosingClass, getEnclosingConstructor, getEnclosingMethod and
+	getField.
+
 2013-04-17  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/ClassFormatError/classInfo/getConstructor.java:
