--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2013-04-24  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/ClassFormatError/classInfo/getSuperclass.java:
+	* testlet/java/lang/ClassFormatError/classInfo/isAssignableFrom.java:
+	* testlet/java/lang/ClassFormatError/classInfo/isInstance.java:
+	* testlet/java/lang/ClassFormatError/classInfo/isInterface.java:
+	* testlet/java/lang/ClassFormatError/classInfo/isLocalClass.java:
+	Updated, make these tests to work correctly with OpenJDK7, added JDK tags etc.
+
 2013-04-22  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/ClassFormatError/classInfo/getDeclaredMethods.java:
