--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2013-04-29  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/ClassFormatError/classInfo/getConstructors.java:
+	* testlet/java/lang/ClassFormatError/classInfo/getDeclaredConstructors.java:
+	* testlet/java/lang/ClassFormatError/classInfo/getDeclaredFields.java:
+	Updated, make these tests to work correctly with OpenJDK7, added JDK tags etc.
+
 2013-04-26  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/ClassFormatError/classInfo/getDeclaredClasses.java:
