Three new tests added for the class ClassNotFoundException: getEnclosingClass, getEnclosingConstructor and getEnclosingMethod.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2013-05-14  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/ClassNotFoundException/classInfo/getEnclosingClass.java:
+	* testlet/java/lang/ClassNotFoundException/classInfo/getEnclosingConstructor.java:
+	* testlet/java/lang/ClassNotFoundException/classInfo/getEnclosingMethod.java:
+	Three new tests added for the class ClassNotFoundException:
+	getEnclosingClass, getEnclosingConstructor and getEnclosingMethod.
+
 2013-05-13  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/ClassNotFoundException/classInfo/getDeclaredAnnotations.java:
