--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2013-05-16  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/ClassNotFoundException/classInfo/getConstructors.java:
+	* testlet/java/lang/ClassNotFoundException/classInfo/getDeclaredConstructors.java:
+	* testlet/java/lang/ClassNotFoundException/classInfo/getDeclaredFields.java:
+	* testlet/java/lang/ClassNotFoundException/classInfo/getDeclaredMethods.java:
+	* testlet/java/lang/ClassNotFoundException/classInfo/getFields.java:
+	* testlet/java/lang/ClassNotFoundException/classInfo/getMethods.java:
+	Updated, make these tests to work correctly with OpenJDK7, added JDK tags etc.
+
 2013-05-15  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/ClassNotFoundException/classInfo/getInterfaces.java:
